--- a/404.html
+++ b/404.html
@@ -6,14 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <!--SEO-->
-    <meta
-      name="description"
-      content="What we offer in our wedding decoration programmes"
-    />
-    <meta
-      name="keywords"
-      content="Wedding decorations,Flowers, Flower atelier,Flower decorations"
-    />
+    <meta name="description" content="404 Error" />
+    <meta name="keywords" content="Wedding decorations,Flowers, Flower atelier,Flower decorations, 404 Error" />
     <!--Link to css sheet-->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="styleForPresets.css" />
@@ -51,20 +45,16 @@
     <header>
       <nav class="navbar">
         <ul class="nav-logotype">
-          <img src="img/čemerica-loho-name.webp" alt="logo" class="nav-logo" />
+          <img src="img/logo.svg" alt="logo" class="nav-logo" />
           <div class="vl"></div>
           <li class="nav-item">
-            <a class="nav-link" href="index.html" class="nav-link"
-              >Flower studio</a
-            >
+            <a class="nav-link" href="index.html" class="nav-link">Flower studio</a>
           </li>
         </ul>
 
         <ul class="nav-menu">
           <li class="nav-item-desk">
-            <a class="nav-link" href="style-your-wedding.html" class="nav-link"
-              >Wedding plans</a
-            >
+            <a class="nav-link" href="style-your-wedding.html" class="nav-link">Wedding plans</a>
           </li>
           <div class="vl"></div>
           <li class="nav-item-desk">
@@ -82,10 +72,10 @@
     <section class="errorContainer">
       <img src="img/404image.png" class="errorPicture" alt="404 error" />
     </section>
-   <!--mobile version-->
-<section class="errorContainerMobile">
-<img src="img/404image.png" class="errorPictureMobile" alt="404 error">
-</section>
+    <!--mobile version-->
+    <section class="errorContainerMobile">
+      <img src="img/404image.png" class="errorPictureMobile" alt="404 error" />
+    </section>
     <!--Footer mobile-->
     <footer class="footer-mobile footer-mobile-noBackground">
       <h5>Contact</h5>
@@ -98,13 +88,7 @@
 
       <div class="footercontent">
         <a href="https://www.facebook.com/kvetycemerica" aria-label="Facebook">
-          <svg
-            class="someIcons"
-            xmlns="http://www.w3.org/2000/svg"
-            width="47"
-            height="46.715"
-            viewBox="0 0 47 46.715"
-          >
+          <svg class="someIcons" xmlns="http://www.w3.org/2000/svg" width="47" height="46.715" viewBox="0 0 47 46.715">
             <path
               id="facebook-brands_1_"
               data-name="facebook-brands (1)"
@@ -115,10 +99,7 @@
           </svg>
         </a>
 
-        <a
-          href="https://www.instagram.com/kvety_cemerica/"
-          aria-label="Instagram"
-        >
+        <a href="https://www.instagram.com/kvety_cemerica/" aria-label="Instagram">
           <svg
             class="someIcons"
             xmlns="http://www.w3.org/2000/svg"
@@ -152,13 +133,7 @@
 
       <div class="footericons-desktop">
         <a href="https://www.facebook.com/kvetycemerica" aria-label="Facebook">
-          <svg
-            class="someIcons"
-            xmlns="http://www.w3.org/2000/svg"
-            width="47"
-            height="46.715"
-            viewBox="0 0 47 46.715"
-          >
+          <svg class="someIcons" xmlns="http://www.w3.org/2000/svg" width="47" height="46.715" viewBox="0 0 47 46.715">
             <path
               id="facebook-brands_1_"
               data-name="facebook-brands (1)"
@@ -168,10 +143,7 @@
             />
           </svg>
         </a>
-        <a
-          href="https://www.instagram.com/kvety_cemerica/"
-          aria-label="Instagram"
-        >
+        <a href="https://www.instagram.com/kvety_cemerica/" aria-label="Instagram">
           <svg
             class="someIcons"
             xmlns="http://www.w3.org/2000/svg"
