--- a/baseProgramme.html
+++ b/baseProgramme.html
@@ -6,14 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <!--SEO-->
-    <meta
-      name="description"
-      content="What we offer in our wedding decoration programmes"
-    />
-    <meta
-      name="keywords"
-      content="Wedding decorations,Flowers, Flower atelier,Flower decorations"
-    />
+    <meta name="description" content="What we offer in our wedding decoration programmes" />
+    <meta name="keywords" content="Wedding decorations,Flowers, Flower atelier,Flower decorations" />
     <!--Link to css sheet-->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="styleForPresets.css" />
@@ -51,20 +45,16 @@
     <header>
       <nav class="navbar">
         <ul class="nav-logotype">
-          <img src="img/čemerica-loho-name.webp" alt="logo" class="nav-logo" />
+          <img src="img/logo.svg" alt="logo" class="nav-logo" />
           <div class="vl"></div>
           <li class="nav-item">
-            <a class="nav-link" href="index.html" class="nav-link"
-              >Flower studio</a
-            >
+            <a class="nav-link" href="index.html" class="nav-link">Flower studio</a>
           </li>
         </ul>
 
         <ul class="nav-menu">
           <li class="nav-item-desk">
-            <a class="nav-link" href="style-your-wedding.html" class="nav-link"
-              >Wedding plans</a
-            >
+            <a class="nav-link" href="style-your-wedding.html" class="nav-link">Wedding plans</a>
           </li>
           <div class="vl"></div>
           <li class="nav-item-desk">
@@ -87,43 +77,18 @@
             <hr width="90%" />
             <p id="inspiration">Wedding inspiration</p>
             <p class="discoverPresetsText">
-              In this step you are able to go through every part of this program
-              to see if it's the right one for you.
+              In this step you are able to go through every part of this program to see if it's the right one for you.
             </p>
             <button class="button-28" id="downButton">Show more</button>
           </section>
           <section class="presetSlideshow">
-            <img
-              class="mySlides2"
-              alt="slideshow picture"
-              src="img/bridesmatesdecoration1.webp"
-            />
-            <img
-              class="mySlides2"
-              alt="slideshow picture"
-              src="img/bridesmatesdecoration2.webp"
-            />
-            <img
-              class="mySlides2"
-              alt="slideshow picture"
-              src="img/buttonholes1.webp"
-            />
+            <img class="mySlides2" alt="slideshow picture" src="img/bridesmatesdecoration1.webp" />
+            <img class="mySlides2" alt="slideshow picture" src="img/bridesmatesdecoration2.webp" />
+            <img class="mySlides2" alt="slideshow picture" src="img/buttonholes1.webp" />
             <section class="slideShowPreset" style="width: 100%">
-              <div
-                class="slider-cell white-cell"
-                id="slid1"
-                onclick="currentDiv(1)"
-              ></div>
-              <div
-                class="slider-cell white-cell"
-                id="slid2"
-                onclick="currentDiv(2)"
-              ></div>
-              <div
-                class="slider-cell white-cell"
-                id="slid3"
-                onclick="currentDiv(3)"
-              ></div>
+              <div class="slider-cell white-cell" id="slid1" onclick="currentDiv(1)"></div>
+              <div class="slider-cell white-cell" id="slid2" onclick="currentDiv(2)"></div>
+              <div class="slider-cell white-cell" id="slid3" onclick="currentDiv(3)"></div>
             </section>
           </section>
         </div>
@@ -131,83 +96,41 @@
     </div>
     <section class="gridPresetPreviewDesktop">
       <section class="presetOptions">
-        <p class="activeOption" onclick="currentPresetSlide(1)">
-          Bouquet for bride
-        </p>
-        <p class="activeOption" onclick="currentPresetSlide(2)">
-          Feather for wedding guests
-        </p>
-        <p class="activeOption" onclick="currentPresetSlide(3)">
-          Wedding hall decorations
-        </p>
-        <p class="activeOption" onclick="currentPresetSlide(4)">
-          Other decorations
-        </p>
+        <p class="activeOption" onclick="currentPresetSlide(1)">Bouquet for bride</p>
+        <p class="activeOption" onclick="currentPresetSlide(2)">Feather for wedding guests</p>
+        <p class="activeOption" onclick="currentPresetSlide(3)">Wedding hall decorations</p>
+        <p class="activeOption" onclick="currentPresetSlide(4)">Other decorations</p>
+        <section class="presetTextAdjust">
+          <p class="presetText"><u>Possible options</u><br />You will be able to choose from different bouquet sizes</p>
+        </section>
         <section class="presetTextAdjust">
           <p class="presetText">
-            <u>Possible options</u><br />You will be able to choose from
-            different bouquet sizes
+            <u>Possible options</u><br />You will be able to choose from different feathers for wedding guests
           </p>
         </section>
         <section class="presetTextAdjust">
           <p class="presetText">
-            <u>Possible options</u><br />You will be able to choose from
-            different feathers for wedding guests
+            <u>Possible options</u><br />You will be able to choose from different wedding hall decorations
           </p>
         </section>
         <section class="presetTextAdjust">
           <p class="presetText">
-            <u>Possible options</u><br />You will be able to choose from
-            different wedding hall decorations
-          </p>
-        </section>
-        <section class="presetTextAdjust">
-          <p class="presetText">
-            <u>Possible options</u><br />You will be able to choose from
-            different other decorations
+            <u>Possible options</u><br />You will be able to choose from different other decorations
           </p>
         </section>
       </section>
       <!--bouquete for bride desktop pictures-->
       <img class="presetPictureDesktop" src="img/bouquet3.webp" alt="Bouquet" />
-      <img
-        class="presetPictureDesktop"
-        src="img/bouquet2.webp"
-        alt="Bouquetes"
-      />
+      <img class="presetPictureDesktop" src="img/bouquet2.webp" alt="Bouquetes" />
       <!--Feather for wedding guest desktop pictures-->
-      <img
-        class="presetPictureDesktop"
-        src="img/buttonholes3.webp"
-        alt="Buttonhole"
-      />
-      <img
-        class="presetPictureDesktop"
-        src="img/buttonholes1.webp"
-        alt="Boutonniere"
-      />
+      <img class="presetPictureDesktop" src="img/buttonholes3.webp" alt="Buttonhole" />
+      <img class="presetPictureDesktop" src="img/buttonholes1.webp" alt="Boutonniere" />
       <!--Wedding hall decorations desktop pictures-->
-      <img
-        class="presetPictureDesktop"
-        src="img/weddingvenue1.webp"
-        alt="Bouquet"
-      />
-      <img
-        class="presetPictureDesktop"
-        src="img/weddingvenue3.webp"
-        alt="Bouquetes"
-      />
+      <img class="presetPictureDesktop" src="img/weddingvenue1.webp" alt="Bouquet" />
+      <img class="presetPictureDesktop" src="img/weddingvenue3.webp" alt="Bouquetes" />
       <!--Other decorations desktop pictures-->
-      <img
-        class="presetPictureDesktop"
-        src="img/otherdecorations2.webp"
-        alt="Bridesmaids decoration"
-      />
-      <img
-        class="presetPictureDesktop"
-        src="img/otherdecorations3.webp"
-        alt="Bridesmaids decoration"
-      />
+      <img class="presetPictureDesktop" src="img/otherdecorations2.webp" alt="Bridesmaids decoration" />
+      <img class="presetPictureDesktop" src="img/otherdecorations3.webp" alt="Bridesmaids decoration" />
     </section>
     <section class="navigationButtonsDesktop">
       <button class="btn1-light">
@@ -226,17 +149,11 @@
     <section class="bouquetePart">
       <h2>Bouquet for bride</h2>
 
-      <img
-        class="shownProduct"
-        src="img/bouquet2.webp"
-        alt="Flower Bouquetes"
-      />
+      <img class="shownProduct" src="img/bouquet2.webp" alt="Flower Bouquetes" />
 
       <section>
         <h4>Possible options</h4>
-        <p class="possibleOptionsText">
-          You will be able to choose from different bouquet sizes
-        </p>
+        <p class="possibleOptionsText">You will be able to choose from different bouquet sizes</p>
       </section>
     </section>
     <!-- part2-->
@@ -247,66 +164,36 @@
 
       <section>
         <h4>Possible options</h4>
-        <p class="possibleOptionsText">
-          You will be able to choose from different feathers for guests
-        </p>
+        <p class="possibleOptionsText">You will be able to choose from different feathers for guests</p>
       </section>
     </section>
     <!--part3-->
     <section class="bouquetePart">
       <h2>Wedding hall decorations</h2>
 
-      <img
-        class="shownProduct"
-        src="img/weddingvenue1.webp"
-        alt="Wedding venue"
-      />
+      <img class="shownProduct" src="img/weddingvenue1.webp" alt="Wedding venue" />
       <h3></h3>
       <section>
         <h4>Possible options</h4>
-        <p class="possibleOptionsText">
-          You will be able to choose from different wedding hall decorations
-        </p>
+        <p class="possibleOptionsText">You will be able to choose from different wedding hall decorations</p>
       </section>
     </section>
     <!--part4-->
     <section class="bouquetePart">
       <h2>Other decorations</h2>
 
-      <img
-        class="shownProduct"
-        src="img/otherdecorations1.webp"
-        alt="bridesmaids decorations"
-      />
+      <img class="shownProduct" src="img/otherdecorations1.webp" alt="bridesmaids decorations" />
       <h3></h3>
       <section>
         <h4>Possible options</h4>
-        <p class="possibleOptionsText">
-          You will be able to choose from different other decorations
-        </p>
+        <p class="possibleOptionsText">You will be able to choose from different other decorations</p>
       </section>
     </section>
     <section class="sliderButtons">
-      <div
-        class="slider-cell slider"
-        id="slid1"
-        onclick="currentPresetSlideMob(1)"
-      ></div>
-      <div
-        class="slider-cell slider"
-        id="slid2"
-        onclick="currentPresetSlideMob(2)"
-      ></div>
-      <div
-        class="slider-cell slider"
-        id="slid3"
-        onclick="currentPresetSlideMob(3)"
-      ></div>
-      <div
-        class="slider-cell slider"
-        id="slid7"
-        onclick="currentPresetSlideMob(4)"
-      ></div>
+      <div class="slider-cell slider" id="slid1" onclick="currentPresetSlideMob(1)"></div>
+      <div class="slider-cell slider" id="slid2" onclick="currentPresetSlideMob(2)"></div>
+      <div class="slider-cell slider" id="slid3" onclick="currentPresetSlideMob(3)"></div>
+      <div class="slider-cell slider" id="slid7" onclick="currentPresetSlideMob(4)"></div>
     </section>
     <section class="navigationButtonsMobile">
       <button class="btn1-light">
@@ -328,13 +215,7 @@
 
       <div class="footercontent">
         <a href="https://www.facebook.com/kvetycemerica" aria-label="Facebook">
-          <svg
-            class="someIcons"
-            xmlns="http://www.w3.org/2000/svg"
-            width="47"
-            height="46.715"
-            viewBox="0 0 47 46.715"
-          >
+          <svg class="someIcons" xmlns="http://www.w3.org/2000/svg" width="47" height="46.715" viewBox="0 0 47 46.715">
             <path
               id="facebook-brands_1_"
               data-name="facebook-brands (1)"
@@ -345,10 +226,7 @@
           </svg>
         </a>
 
-        <a
-          href="https://www.instagram.com/kvety_cemerica/"
-          aria-label="Instagram"
-        >
+        <a href="https://www.instagram.com/kvety_cemerica/" aria-label="Instagram">
           <svg
             class="someIcons"
             xmlns="http://www.w3.org/2000/svg"
@@ -382,13 +260,7 @@
 
       <div class="footericons-desktop">
         <a href="https://www.facebook.com/kvetycemerica" aria-label="Facebook">
-          <svg
-            class="someIcons"
-            xmlns="http://www.w3.org/2000/svg"
-            width="47"
-            height="46.715"
-            viewBox="0 0 47 46.715"
-          >
+          <svg class="someIcons" xmlns="http://www.w3.org/2000/svg" width="47" height="46.715" viewBox="0 0 47 46.715">
             <path
               id="facebook-brands_1_"
               data-name="facebook-brands (1)"
@@ -398,10 +270,7 @@
             />
           </svg>
         </a>
-        <a
-          href="https://www.instagram.com/kvety_cemerica/"
-          aria-label="Instagram"
-        >
+        <a href="https://www.instagram.com/kvety_cemerica/" aria-label="Instagram">
           <svg
             class="someIcons"
             xmlns="http://www.w3.org/2000/svg"
