--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <!--SEO-->
-    <meta
-      name="description"
-      content="What we offer in our wedding decoration programmes"
-    />
-    <meta
-      name="keywords"
-      content="Wedding decorations,Flowers, Flower atelier,Flower decorations"
-    />
+    <meta name="description" content="Contact us for further partnership" />
+    <meta name="keywords" content="Wedding decorations,Flowers, Flower atelier,Flower decorations, Contact" />
     <!--Link to css sheet-->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="styleForPresets.css" />
@@ -51,20 +45,16 @@
     <header>
       <nav class="navbar">
         <ul class="nav-logotype">
-          <img src="img/čemerica-loho-name.webp" alt="logo" class="nav-logo" />
+          <img src="img/logo.svg" alt="logo" class="nav-logo" />
           <div class="vl"></div>
           <li class="nav-item">
-            <a class="nav-link" href="index.html" class="nav-link"
-              >Flower studio</a
-            >
+            <a class="nav-link" href="index.html" class="nav-link">Flower studio</a>
           </li>
         </ul>
 
         <ul class="nav-menu">
           <li class="nav-item-desk">
-            <a class="nav-link" href="style-your-wedding.html" class="nav-link"
-              >Wedding plans</a
-            >
+            <a class="nav-link" href="style-your-wedding.html" class="nav-link">Wedding plans</a>
           </li>
           <div class="vl"></div>
           <li class="nav-item-desk">
@@ -87,44 +77,19 @@
             <hr width="90%" />
             <p id="inspiration">Configuration preview</p>
             <p class="inspired">
-              This is your last step to perfect wedding day. In this step you
-              can see your configuration, here you can also choose to contact us
-              so we can talk more about your requirements
+              This is your last step to perfect wedding day. In this step you can see your configuration, here you can
+              also choose to contact us so we can talk more about your requirements
             </p>
             <button class="button-main" id="downButton">See my preset</button>
           </section>
           <section class="presetSlideshow">
-            <img
-              class="mySlides2"
-              alt="slideshow picture"
-              src="img/bridesmatesdecoration1.webp"
-            />
-            <img
-              class="mySlides2"
-              alt="slideshow picture"
-              src="img/bridesmatesdecoration2.webp"
-            />
-            <img
-              class="mySlides2"
-              alt="slideshow picture"
-              src="img/buttonholes1.webp"
-            />
+            <img class="mySlides2" alt="slideshow picture" src="img/bridesmatesdecoration1.webp" />
+            <img class="mySlides2" alt="slideshow picture" src="img/bridesmatesdecoration2.webp" />
+            <img class="mySlides2" alt="slideshow picture" src="img/buttonholes1.webp" />
             <section class="slideShowPreset" style="width: 100%">
-              <div
-                class="slider-cell white-cell"
-                id="slid1"
-                onclick="currentDiv(1)"
-              ></div>
-              <div
-                class="slider-cell white-cell"
-                id="slid2"
-                onclick="currentDiv(2)"
-              ></div>
-              <div
-                class="slider-cell white-cell"
-                id="slid3"
-                onclick="currentDiv(3)"
-              ></div>
+              <div class="slider-cell white-cell" id="slid1" onclick="currentDiv(1)"></div>
+              <div class="slider-cell white-cell" id="slid2" onclick="currentDiv(2)"></div>
+              <div class="slider-cell white-cell" id="slid3" onclick="currentDiv(3)"></div>
             </section>
           </section>
         </div>
@@ -147,11 +112,9 @@
         <p>Bridesmaids decorations</p>
         <p>Other decorations</p>
         <section class="navigationButtonsDesktopContact">
-          
-        <a href="style-your-wedding.html">
-          <button class="btn1-light">Previous step</button>
-        </a>
-
+          <a href="style-your-wedding.html">
+            <button class="btn1-light">Previous step</button>
+          </a>
         </section>
       </section>
       <section class="availableFlowersSlide">
@@ -162,43 +125,17 @@
       <section class="contactMobile">
         <section class="contactMobileContent">
           <p class="contactText">
-            By contacting us, we will receive your customisation and then we
-            will be able to give you a price estimate
+            By contacting us, we will receive your customisation and then we will be able to give you a price estimate
           </p>
-          <form
-            action="https://formsubmit.co/sosiso4ki64@gmail.com"
-            method="POST"
-          >
-            <input
-              type="text"
-              name="name"
-              placeholder="Name"
-              class="contactInput"
-            />
+          <form action="https://formsubmit.co/sosiso4ki64@gmail.com" method="POST">
+            <input type="text" name="name" placeholder="Name" class="contactInput" />
             <br />
-            <input
-              type="text"
-              name="email"
-              placeholder="E-mail"
-              class="contactInput"
-            />
+            <input type="text" name="email" placeholder="E-mail" class="contactInput" />
             <br />
-            <input
-              type="text"
-              name="phone"
-              placeholder="Phone"
-              class="contactInput"
-            />
+            <input type="text" name="phone" placeholder="Phone" class="contactInput" />
             <br />
-            <input
-              type="text"
-              name="text"
-              placeholder="Your message"
-              class="contactInput yourMessage"
-            /><br />
-            <button type="submit" class="btn1-light contactButton">
-              Contact
-            </button>
+            <input type="text" name="text" placeholder="Your message" class="contactInput yourMessage" /><br />
+            <button type="submit" class="btn1-light contactButton">Contact</button>
           </form>
         </section>
       </section>
@@ -217,43 +154,17 @@
       <section class="contactMobile">
         <section class="contactMobileContent">
           <p class="contactText">
-            By contacting us, we will receive your customisation and then we
-            will be able to give you a price estimate
+            By contacting us, we will receive your customisation and then we will be able to give you a price estimate
           </p>
-          <form
-            action="https://formsubmit.co/sosiso4ki64@gmail.com"
-            method="POST"
-          >
-            <input
-              type="text"
-              name="Name"
-              placeholder="Name"
-              class="contactInput"
-            />
+          <form action="https://formsubmit.co/sosiso4ki64@gmail.com" method="POST">
+            <input type="text" name="Name" placeholder="Name" class="contactInput" />
             <br />
-            <input
-              type="email"
-              name="email"
-              placeholder="E-mail"
-              class="contactInput"
-            />
+            <input type="email" name="email" placeholder="E-mail" class="contactInput" />
             <br />
-            <input
-              type="text"
-              name="phone"
-              placeholder="Phone"
-              class="contactInput"
-            />
+            <input type="text" name="phone" placeholder="Phone" class="contactInput" />
             <br />
-            <input
-              type="text"
-              name="text"
-              placeholder="Your message"
-              class="contactInput yourMessage"
-            /><br />
-            <button type="submit" class="btn1-light contactButton">
-              Contact
-            </button>
+            <input type="text" name="text" placeholder="Your message" class="contactInput yourMessage" /><br />
+            <button type="submit" class="btn1-light contactButton">Contact</button>
           </form>
         </section>
       </section>
@@ -275,13 +186,7 @@
 
       <div class="footercontent">
         <a href="https://www.facebook.com/kvetycemerica" aria-label="Facebook">
-          <svg
-            class="someIcons"
-            xmlns="http://www.w3.org/2000/svg"
-            width="47"
-            height="46.715"
-            viewBox="0 0 47 46.715"
-          >
+          <svg class="someIcons" xmlns="http://www.w3.org/2000/svg" width="47" height="46.715" viewBox="0 0 47 46.715">
             <path
               id="facebook-brands_1_"
               data-name="facebook-brands (1)"
@@ -292,10 +197,7 @@
           </svg>
         </a>
 
-        <a
-          href="https://www.instagram.com/kvety_cemerica/"
-          aria-label="Instagram"
-        >
+        <a href="https://www.instagram.com/kvety_cemerica/" aria-label="Instagram">
           <svg
             class="someIcons"
             xmlns="http://www.w3.org/2000/svg"
@@ -329,13 +231,7 @@
 
       <div class="footericons-desktop">
         <a href="https://www.facebook.com/kvetycemerica" aria-label="Facebook">
-          <svg
-            class="someIcons"
-            xmlns="http://www.w3.org/2000/svg"
-            width="47"
-            height="46.715"
-            viewBox="0 0 47 46.715"
-          >
+          <svg class="someIcons" xmlns="http://www.w3.org/2000/svg" width="47" height="46.715" viewBox="0 0 47 46.715">
             <path
               id="facebook-brands_1_"
               data-name="facebook-brands (1)"
@@ -345,10 +241,7 @@
             />
           </svg>
         </a>
-        <a
-          href="https://www.instagram.com/kvety_cemerica/"
-          aria-label="Instagram"
-        >
+        <a href="https://www.instagram.com/kvety_cemerica/" aria-label="Instagram">
           <svg
             class="someIcons"
             xmlns="http://www.w3.org/2000/svg"
