--- a/style-your-wedding.html
+++ b/style-your-wedding.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!--SEO-->
     <meta name="description" content="Choose wedding decoration programme">
-    <meta name="keywords" content="Wedding decorations,Flowers, Flower atelier,Flower decorations">
+    <meta name="keywords" content="Wedding decorations,Flowers, Flower atelier,Flower decorations, Wedding programmes">
     <!--Link to css sheet-->
     <link rel="stylesheet" href="style.css">
     <title>Kvety Cemerica</title>
@@ -37,7 +37,7 @@
         <nav class="navbar">
 
             <ul class="nav-logotype">
-                <img src="img/čemerica-loho-name.webp" alt="logo" class="nav-logo">
+                <img src="img/logo.svg" alt="logo" class="nav-logo">
                 <div class="vl"></div>
                 <li class="nav-item">
                     <a class="nav-link" href="index.html" class="nav-link">Flower studio</a>
@@ -121,7 +121,7 @@
                 <div class="prog-img">
                     <img src="img/program3.webp" alt="plus icon" class="whitePlus">
                         <div class="middle">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="auto" height="auto" fill="white" class="bi-plus" viewBox="0 0 16 16">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="auto"  fill="white" class="bi-plus" viewBox="0 0 16 16">
                                 <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
                             </svg>
                         </div>
@@ -144,7 +144,7 @@
                 <div class="prog-img">
                     <img src="img/program2.webp" alt="PLus icon" class="whitePlus">
                         <div class="middle">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="auto" height="auto" fill="white" class="bi bi-plus" viewBox="0 0 16 16">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="auto"  fill="white" class="bi bi-plus" viewBox="0 0 16 16">
                                 <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
                             </svg>
                         </div>
@@ -163,7 +163,7 @@
                 <div class="prog-img">
                     <img src="img/program1.webp" alt="PLus icon" class="whitePlus">
                         <div class="middle">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="auto" height="auto" fill="white" class="bi bi-plus" viewBox="0 0 16 16">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="auto"  fill="white" class="bi bi-plus" viewBox="0 0 16 16">
                                 <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
                             </svg>
                         </div>
