--- a/flower-availability.html
+++ b/flower-availability.html
@@ -6,11 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <!--CEO-->
-    <meta name="ROBOTS" content="NOINDEX, NOFOLLOW" />
-    <meta
-      name="Kvety Cemerica welcome to our flower atelier"
-      content="what we offer, why choose us, "
-    />
+    <meta name="description" content="Discover available flowers by month">
+    <meta name="keywords" content="Wedding decorations,Flowers, Flower atelier,Flower decorations, Flower availability">
     <!--Link to css sheet-->
 
     <link rel="stylesheet" href="style.css">
@@ -50,7 +47,7 @@
     <header>
       <nav class="navbar">
         <ul class="nav-logotype">
-          <img src="img/čemerica-loho-name.webp" class="nav-logo" />
+          <img src="img/logo.svg" alt="logo" class="nav-logo" />
           <div class="vl"></div>
           <li class="nav-item">
             <a class="nav-link" href="index.html" class="nav-link"
@@ -90,9 +87,9 @@
           <button class="button-main" id="downButton">Show more</button>
         </section>
         <section class="presetSlideshow">
-          <img class="mySlides2" alt="slideshow picture" src="img/flowers/summer4.jpg" />
-          <img class="mySlides2" alt="slideshow picture" src="img/flowers/spring1.jpg" />
-          <img class="mySlides2" alt="slideshow picture" src="img/flowers/summer2.jpg" />
+          <img class="mySlides2" alt="slideshow picture" src="img/flowers/summer4.webp" />
+          <img class="mySlides2" alt="slideshow picture" src="img/flowers/spring1.webp" />
+          <img class="mySlides2" alt="slideshow picture" src="img/flowers/summer2.webp" />
           <section class="slideShowPreset" style="width: 100%">
             <div class="slider-cell white-cell" id="slid1" onclick="currentDiv(1)"></div>
             <div class="slider-cell white-cell" id="slid2" onclick="currentDiv(2)"></div>
@@ -116,7 +113,7 @@
       <section class="season-wheel">
         <div class="wheel-section">
           <div class="wheel-frame">
-            <img id="arrow" src="img/arrow.png" />
+            <img id="arrow" alt="arrow" src="img/arrow.png" />
 
             <div id="link-grid">
               <div
@@ -144,16 +141,18 @@
                 value="Change"
               ></div>
               <img
+              alt="season wheel"
                 class="season-pics"
                 id="months"
                 src="img/seasons_wheel.png"
               />
             </div>
-            <img class="season-pics" id="spring" src="img/spring.png" />
-            <img class="season-pics" id="summer" src="img/summer.png" />
-            <img class="season-pics" id="autum" src="img/autum.png" />
-            <img class="season-pics" id="winter" src="img/winter.png" />
+            <img class="season-pics" alt="spring" id="spring" src="img/spring.png" />
+            <img class="season-pics" alt="summer" id="summer" src="img/summer.png" />
+            <img class="season-pics" alt="autumn" id="autum" src="img/autum.png" />
+            <img class="season-pics" alt="winter" id="winter" src="img/winter.png" />
             <img
+            alt="choose season"
               class="season-pics"
               id="season-featured"
               src="img/choose-season.png"
@@ -174,17 +173,17 @@
 
       <section class="flowers-container">
         <div class="flower-frame" id="english-rose">
-          <img src="img/flowers/spring1.jpg" class="flower" id="flower1" />
+          <img src="img/flowers/spring1.webp" alt="flowers" class="flower" id="flower1" />
           <p class="flower-name" id="flowerName1">Lisianthus</p>
         </div>
 
         <div class="flower-frame" id="">
-          <img src="img/flowers/spring2a.jpg" class="flower" id="flower2" />
+          <img src="img/flowers/spring2a.webp" alt="flowers" class="flower" id="flower2" />
           <p class="flower-name" id="flowerName2">White Rose</p>
         </div>
 
         <div class="flower-frame" id="">
-          <img src="img/flowers/spring3.jpg" class="flower" id="flower3" />
+          <img src="img/flowers/spring3.webp" alt="flowers" class="flower" id="flower3" />
           <p class="flower-name" id="flowerName3">English rose</p>
         </div>
       </section>
