--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <!--CEO-->
+    <!--SEO-->
     <meta name="description" content="Kvety Cemerica welcome to our flower atelier">
-    <!--Link to css sheet-->
     <meta name="keywords" content="Wedding decorations,Flowers, Flower atelier,Flower decorations">
+    <!--Link to css sheet-->
     <link rel="stylesheet" href="style.css">
     <title>Kvety Cemerica</title>
     <link rel="shortcut icon" type="image/jpg" href="img/FAVICON.png"/>
@@ -47,7 +47,7 @@
         <nav class="navbar">
 
             <ul class="nav-logotype">
-                <img src="img/čemerica-loho-name.webp"  class="nav-logo" alt="logo">
+                <img src="img/logo.svg"  class="nav-logo" alt="logo">
                 <div class="vl"></div>
                 <li class="nav-item">
                     <a class="nav-link" href="index.html" class="nav-link">Flower studio</a>
