changed images format to webp and changed code

--- a/404.html
+++ b/404.html
@@ -11,6 +11,7 @@
     <!--Link to css sheet-->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="styleForPresets.css" />
+    <link rel="shortcut icon" type="image/jpg" href="img/favicon.webp" />
     <title>Kvety Cemerica</title>
   </head>
   <body>
@@ -70,11 +71,11 @@
     </header>
     <!--DESKTOP VERSION-->
     <section class="errorContainer">
-      <img src="img/404image.png" class="errorPicture" alt="404 error" />
+      <img src="img/404image.webp" class="errorPicture" alt="404 error" />
     </section>
     <!--mobile version-->
     <section class="errorContainerMobile">
-      <img src="img/404image.png" class="errorPictureMobile" alt="404 error" />
+      <img src="img/404image.webp" class="errorPictureMobile" alt="404 error" />
     </section>
     <!--Footer mobile-->
     <footer class="footer-mobile footer-mobile-noBackground">
