--- a/flower-availability.html
+++ b/flower-availability.html
@@ -11,7 +11,7 @@
     <!--Link to css sheet-->
 
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
+    <link rel="shortcut icon" type="image/webp" href="img/favicon.webp"/>
 
     <title>Kvety Cemerica</title>
   </head>
@@ -113,7 +113,7 @@
       <section class="season-wheel">
         <div class="wheel-section">
           <div class="wheel-frame">
-            <img id="arrow" alt="arrow" src="img/arrow.png" />
+            <img id="arrow" alt="arrow" src="img/arrow.webp" />
 
             <div id="link-grid">
               <div
@@ -144,18 +144,18 @@
               alt="season wheel"
                 class="season-pics"
                 id="months"
-                src="img/seasons_wheel.png"
+                src="img/seasons_wheel.webp"
               />
             </div>
-            <img class="season-pics" alt="spring" id="spring" src="img/spring.png" />
-            <img class="season-pics" alt="summer" id="summer" src="img/summer.png" />
-            <img class="season-pics" alt="autumn" id="autum" src="img/autum.png" />
-            <img class="season-pics" alt="winter" id="winter" src="img/winter.png" />
+            <img class="season-pics" alt="spring" id="spring" src="img/spring.webp" />
+            <img class="season-pics" alt="summer" id="summer" src="img/summer.webp" />
+            <img class="season-pics" alt="autumn" id="autum" src="img/autum.webp" />
+            <img class="season-pics" alt="winter" id="winter" src="img/winter.webp" />
             <img
             alt="choose season"
               class="season-pics"
               id="season-featured"
-              src="img/choose-season.png"
+              src="img/choose-season.webp"
             />
           </div>
         </div>
