--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--Link to css sheet-->
     <link rel="stylesheet" href="style.css">
     <title>Kvety Cemerica</title>
-    <link rel="shortcut icon" type="image/jpg" href="img/FAVICON.png"/>
+    <link rel="shortcut icon" type="image/jpg" href="img/favicon.webp"/>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-TEKWGLVPBP"></script>
     <script>
@@ -124,10 +124,10 @@
                         <img loading="lazy" class="present-img" alt="Bouquet" src="img/bouquet2.webp">
                     </div>
                     <div>   
-                        <img loading="lazy" class="present-img" alt="Bouquet" src="img/bridesbouquete.jpg">
+                        <img loading="lazy" class="present-img" alt="Bouquet" src="img/bridesbouquete.webp">
                     </div>
                     <div>   
-                        <img loading="lazy" class="present-img" alt="Bouquet" src="img/bouquet4.JPG">
+                        <img loading="lazy" class="present-img" alt="Bouquet" src="img/bouquet4.webp">
                     </div>
                 </div>
 
