--- a/style-your-wedding.html
+++ b/style-your-wedding.html
@@ -10,7 +10,9 @@
     <meta name="keywords" content="Wedding decorations,Flowers, Flower atelier,Flower decorations, Wedding programmes">
     <!--Link to css sheet-->
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/jpg" href="img/favicon.webp"/>
     <title>Kvety Cemerica</title>
+    
 </head>
 <style>
     a:link { text-decoration: none; }
