--- a/partialProgramme.html
+++ b/partialProgramme.html
@@ -11,6 +11,7 @@
     <!--Link to css sheet-->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="styleForPresets.css" />
+    <link rel="shortcut icon" type="image/jpg" href="img/favicon.webp"/>
     <title>Kvety Cemerica</title>
   </head>
   <body onload="currentDiv(1); currentPresetSlide(1); currentPresetSlideMob(1)">
