fixed images,background,nav for iphone,nofixed
fixed images

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <!--Link to css sheet-->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="styleForPresets.css" />
-    <link rel="shortcut icon" type="image/jpg" href="img/favicon.webp"/>
+    <link rel="shortcut icon" type="image/jpg" href="img/favicon.webp" />
     <title>Kvety Cemerica</title>
   </head>
   <body>
@@ -31,11 +31,6 @@
 
       body {
         margin: 0;
-        background-image: url(img/background.webp);
-        background-repeat: no-repeat, repeat;
-        background-size: 130%;
-        /*background-size: cover; /* Resize the background image to cover the entire container */
-        /*box-shadow: inset 0 0 20vmin 0 #585247;}*/
         align-items: center;
       }
       ul {
@@ -119,9 +114,9 @@
         </section>
       </section>
       <section class="availableFlowersSlide">
-        <img src="img/flowers/spring3.jpg" class="availableFlowers" alt="" />
-        <img src="img/flowers/spring2a.jpg" class="availableFlowers" alt="" />
-        <img src="img/flowers/spring1.jpg" class="availableFlowers" alt="" />
+        <img src="img/flowers/spring3.webp" class="availableFlowers" alt="Flowers" />
+        <img src="img/flowers/spring2a.webp" class="availableFlowers" alt="Flowers" />
+        <img src="img/flowers/spring1.webp" class="availableFlowers" alt="Flowers" />
       </section>
       <section class="contactMobile">
         <section class="contactMobileContent">
