--- a/index.html
+++ b/index.html
@@ -30,11 +30,7 @@
 
     body{
         margin: 0;
-        background-image: url(img/background.webp);
-        background-repeat: no-repeat, repeat;
-        background-size:130%;
-        /*background-size: cover; /* Resize the background image to cover the entire container */
-        /*box-shadow: inset 0 0 20vmin 0 #585247;}*/
+
         align-items: center;
     }
     ul{
@@ -310,13 +306,13 @@
         </div>
 
         <div class="slider">
-            <div class="slider-cell" id="slid1" onclick="currentSlide(1)"></div>
-            <div class="slider-cell" id="slid2" onclick="currentSlide(2)"></div>
-            <div class="slider-cell" id="slid3" onclick="currentSlide(3)"></div>
-            <div class="slider-cell" id="slid4" onclick="currentSlide(4)"></div>
-            <div class="slider-cell" id="slid5" onclick="currentSlide(5)"></div>
-            <div class="slider-cell" id="slid6" onclick="currentSlide(6)"></div>
-            <div class="slider-cell" id="slid7" onclick="currentSlide(7)"></div>
+            <div class="slider-cell cells7" id="slid1" onclick="currentSlide(1)"></div>
+            <div class="slider-cell cells7" id="slid2" onclick="currentSlide(2)"></div>
+            <div class="slider-cell cells7" id="slid3" onclick="currentSlide(3)"></div>
+            <div class="slider-cell cells7" id="slid4" onclick="currentSlide(4)"></div>
+            <div class="slider-cell cells7" id="slid5" onclick="currentSlide(5)"></div>
+            <div class="slider-cell cells7" id="slid6" onclick="currentSlide(6)"></div>
+            <div class="slider-cell cells7" id="slid7" onclick="currentSlide(7)"></div>
         </div>
 
 
